prod deploy final changes

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,12 @@
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
     <title>Aman</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="gamer.png
+    "
+    />
     <!--========== Simple Line Icons ==========-->
     <link
       rel="stylesheet"
